Adds start of landing page, bootstrap, and a base html template

--- a/recorder/templates/recorder/user.html
+++ b/recorder/templates/recorder/user.html
@@ -1,2 +1,8 @@
-<a href="/accounts/logout">logout</a>
-<p>User page</p>
+{% extends 'base.html' %}
+
+{% block title %}User Page{%  endblock title %}
+
+{% block content %}
+    <a href="/accounts/logout">logout</a>
+    <p>User page</p>
+{% endblock content %}
