--- a/recorder/templates/recorder/doctor_dashboard.html
+++ b/recorder/templates/recorder/doctor_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}User Page{%  endblock title %}
+{% block title %}Dashboard{%  endblock title %}
 
 {% block content %}
     <a href="/accounts/logout">logout</a>
