Change Person to Patient and revise models

--- a/recorder/templates/recorder/doctor_dashboard.html
+++ b/recorder/templates/recorder/doctor_dashboard.html
@@ -3,5 +3,6 @@
 {% block title %}Dashboard{%  endblock title %}
 
 {% block content %}
-    <p>User page</p>
+    <h2>Patients</h2>
+
 {% endblock content %}
