--- a/recorder/templates/recorder/add_patient.html
+++ b/recorder/templates/recorder/add_patient.html
@@ -4,15 +4,13 @@
     <h2>Add a new patient</h2>
     <form method="post">
         {% csrf_token %}
+        {{ formset.management_form }}
         {{ form.as_ul }}
-        <fieldset id="prescription_list"></fieldset>
-        <input type="button" value="Add Prescription" class="add" id="add" />
-        <button class="btn btn-primary" type="submit">Save Patient</button>
+        {% for sub_form in formset %}
+            {{ sub_form.as_ul }}
+            <button class="btn" type="submit" name="action" value="{{ sub_form.prefix }}-DELETE">Remove Prescription</button>
+        {% endfor %}
+        <button class="btn" type="submit" name="action" value="add">Add Prescription</button>
+        <button class="btn btn-primary" type="submit" name="action" value="save">Save Patient</button>
     </form>
 {% endblock content %}
-
-{% block extra-js %}
-    {% load static %}
-    <script src="{% static 'recorder/add_patient.js' %}"></script>
-{% endblock extra-js %}
-
