Adds a patient details page skeleton

--- a/recorder/templates/recorder/doctor_dashboard.html
+++ b/recorder/templates/recorder/doctor_dashboard.html
@@ -6,7 +6,7 @@
     <h2>Patients</h2>
     <ul>
         {% for patient in patients %}
-            <li>{{ patient }}</li>
+            <li><a href="{% url 'recorder:patient_details' patient.id %}">{{ patient }}</a></li>
         {% endfor %}
     </ul>
     <button class="btn btn-block" onclick="location.href='{% url 'recorder:add_patient' %}'">
