--- a/recorder/templates/recorder/patient_details.html
+++ b/recorder/templates/recorder/patient_details.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Patient Details for {{ patient.user.first_name }} {{ patient.user.last_name }}{%  endblock title %}
+
+{% block content %}
+    <h2>Patient Details for {{ patient.user.first_name }} {{ patient.user.last_name }}</h2>
+    <p>Date of birth: {{ patient.date_of_birth }}</p>
+    <h3>Prescriptions</h3>
+    <form method="post">
+        {% csrf_token %}
+        {{ formset.management_form }}
+        {% for form in formset %}
+            <div id="{{ form.prefix }}-row">
+                {{ form.as_table }}
+            </div>
+        {% endfor %}
+    </form>
+    <h3>Videos</h3>
+    <br />
+    <button class="btn" type="submit" name="action" value="remove">Remove Patient</button>
+    <button class="btn btn-primary" type="submit" name="action" value="update">Update Patient</button>
+{% endblock content %}
+
+{% block extra-js %}
+    {% load static %}
+    <script type="text/javascript" src="{% static 'recorder/jquery.formset.js' %}"></script>
+    <script type="text/javascript">
+        $(function() {
+            $('form div').formset({
+                prefix: 'p_form',
+                addText: 'Add Prescription',
+                deleteText: 'remove'
+            })
+        })
+    </script>
+{% endblock extra-js %}
