Adds title to doctor_creation template

--- a/recorder/templates/recorder/doctor_creation.html
+++ b/recorder/templates/recorder/doctor_creation.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Doctor Account Creation{%  endblock title %}
+
 {% block content %}
     <h2>Account Creation</h2>
     <form method="post">
