Gets video capture and replaying working.

--- a/recorder/templates/recorder/record_video.html
+++ b/recorder/templates/recorder/record_video.html
@@ -3,11 +3,10 @@
 {% block title %}Record Video{%  endblock title %}
 
 {% block content %}
-    <video autoplay muted></video>
+    <video autoplay></video>
 
     <div>
         <button id="record" disabled>Start Recording</button>
-        <button id="upload" disabled>Submit Video</button>
     </div>
 {% endblock content %}
 
