--- a/recorder/templates/recorder/record_video.html
+++ b/recorder/templates/recorder/record_video.html
@@ -8,14 +8,12 @@
 
     <div>
         <button id="record" disabled>Start Recording</button>
-        <button id="upload" disabled>Upload</button>
+        <form id="video_upload" method="post" action="">
+            {% csrf_token %}
+            <button id="upload" disabled>Upload</button>
+        </form>
     </div>
 
-    <form id="video_upload" method="post" enctype="multipart/form-data" action="">
-        {% csrf_token %}
-        {{ form.file.as_hidden }}
-        {{ form.script_index.as_hidden }}
-    </form>
 {% endblock content %}
 
 {% block extra-js %}
