Gets close to done with the record page. NEED TO FIX: Redirect isn't working

--- a/recorder/templates/recorder/patient_dashboard.html
+++ b/recorder/templates/recorder/patient_dashboard.html
@@ -80,8 +80,8 @@
                     med_div.appendChild(node);
                     node = document.createElement("button");
                     node.innerHTML = "Record Medication";
-                    node.setAttribute('name', 'script_index');
-                    node.setAttribute('value', i);
+                    node.setAttribute('name', 'medication');
+                    node.setAttribute('value', medications[i]);
                     med_div.appendChild(node);
                 }
             } else {
