--- a/recorder/templates/recorder/record_video.html
+++ b/recorder/templates/recorder/record_video.html
@@ -10,6 +10,7 @@
         <button id="record" disabled>Start Recording</button>
         <form id="video_upload" method="post" action="">
             {% csrf_token %}
+            {{ form.medication.as_hidden }}
             <button id="upload" disabled>Upload</button>
         </form>
     </div>
