--- a/recorder/templates/recorder/patient_dashboard.html
+++ b/recorder/templates/recorder/patient_dashboard.html
@@ -14,53 +14,7 @@
 
     <h2>Videos</h2>
     <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Medication</th>
-                    <th>Day -4</th>
-                    <th>Day -3</th>
-                    <th>Day -2</th>
-                    <th>Day -1</th>
-                    <th>Day 0</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for prescription in patient.prescriptions.all %}
-                    <tr>
-                        <td>{{ prescription.medication }}</td>
-                        <td>
-                            {% for dosage_time in prescription.dosage_times %}
-                                <p>{{ dosage_time|time:"H:i" }}</p>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            {% for dosage_time in prescription.dosage_times %}
-                                <p>{{ dosage_time|time:"H:i" }}</p>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            {% for dosage_time in prescription.dosage_times %}
-                                <p>{{ dosage_time|time:"H:i" }}</p>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            {% for dosage_time in prescription.dosage_times %}
-                                <p>{{ dosage_time|time:"H:i" }}</p>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            <!-- Day 0 -->
-                            {% for dosage_time in prescription.dosage_times %}
-                                {% if %}
-
-                                {% endif %}
-                                <p>{{ dosage_time|time:"H:i" }}</p>
-                            {% endfor %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
+        <table id="video_table" class="table">
         </table>
     </div>
 {% endblock content %}
@@ -100,6 +54,33 @@
                     par = document.createTextNode(medications[i] + " at " + time[i]);
                     node.appendChild(par);
                     med_div.appendChild(node);
+                }
+            }
+        });
+
+        $(function() {
+            var table = document.getElementById("video_table");
+            var header = table.createTHead();
+            var row = header.insertRow(-1);
+            var header_cells = ["Medication", "Day -4", "Day -3", "Day -2", "Day -1", "Day 0"];
+            for (i=0; i < header_cells.length; i++) {
+                var cell = row.insertCell(-1);
+                cell.innerHTML = header_cells[i];
+            }
+            var prescriptions = {{ prescriptions|safe }};
+            for (i=0; i < prescriptions.length; i++) {
+                var prescription = prescriptions[i];
+                row = table.insertRow(-1);
+                cell = row.insertCell(-1);
+                cell.innerHTML = prescription[1];
+                for (j=0; j < header_cells.length - 1; j++) {
+                    cell = row.insertCell(-1);
+                    var times = prescription[3];
+                    for (k=0; k < times.length; k++) {
+                        var node = document.createElement("P");
+                        node.innerHTML = times[k];
+                        cell.appendChild(node);
+                    }
                 }
             }
         });
